# liboqs_KpqC

./: .gitignore  CMakeLists.txt  README.md
.CMake/: alg_support.cmake
src/: CMakeLists.txt  oqsconfig.h.cmake
src/kem/: kem.c  kem.h
src/kem/ntru_plus/: CMakeLists.txt  Makefile  cmake_install.cmake  kem_ntru_plus.h  kem_ntru_plus_kem1152.c  kem_ntru_plus_kem576.c  kem_ntru_plus_kem768.c  kem_ntru_plus_kem864.c
src/kem/ntru_plus/KpqClean_ver2_NTRU_PLUS_KEM1152_avx2/: symmetric.c
src/kem/ntru_plus/KpqClean_ver2_NTRU_PLUS_KEM1152_clean/: api.h  ntt.c  ntt.h  poly.c  poly.h  reduce.h  symmetric.h  verify.h
src/kem/ntru_plus/KpqClean_ver2_NTRU_PLUS_KEM576_avx2/: symmetric.c  symmetric.h  verify.c
src/kem/ntru_plus/KpqClean_ver2_NTRU_PLUS_KEM576_clean/: api.h  ntt.c  ntt.h  poly.c  poly.h  reduce.c  reduce.h  verify.h
src/kem/ntru_plus/KpqClean_ver2_NTRU_PLUS_KEM768_avx2/: Makefile
src/kem/ntru_plus/KpqClean_ver2_NTRU_PLUS_KEM768_clean/: api.h  ntt.c  ntt.h  params.h  poly.c  poly.h  reduce.h  symmetric.h  verify.h
src/kem/ntru_plus/KpqClean_ver2_NTRU_PLUS_KEM864_clean/: api.h  ntt.c  ntt.h  params.h  poly.c  poly.h  reduce.c  reduce.h  symmetric.h  verify.h
src/kem/smaug_t/: CMakeLists.txt  Makefile  cmake_install.cmake  kem_smaug_t.h  kem_smaug_t1.c  kem_smaug_t3.c  kem_smaug_t5.c  kem_smaug_timer.c
src/kem/smaug_t/KpqClean_ver2_SMAUG-T1_avx2_kem/: api.h  dg.h
src/kem/smaug_t/KpqClean_ver2_SMAUG-T1_clean/: api.h  cbd.c  ciphertext.h  dg.c  kem.c  kem.h  key.h  parameters.h  poly.h  toomcook.h
src/kem/smaug_t/KpqClean_ver2_SMAUG-T1_kem90s/: parameters.h
src/kem/smaug_t/KpqClean_ver2_SMAUG-T3_avx2_kem/: api.h  key.h  parameters.h
src/kem/smaug_t/KpqClean_ver2_SMAUG-T3_avx2_kem90s/: Makefile  symmetric.h
src/kem/smaug_t/KpqClean_ver2_SMAUG-T3_clean/: api.h  ciphertext.c  hwt.h  indcpa.c  io.c  kem.c  key.c  pack.c  parameters.h  verify.h
src/kem/smaug_t/KpqClean_ver2_SMAUG-T5_avx2_kem/: Makefile  api.h  hash.h  hwt.h
src/kem/smaug_t/KpqClean_ver2_SMAUG-T5_avx2_kem90s/: parameters.h
src/kem/smaug_t/KpqClean_ver2_SMAUG-T5_clean/: api.h  cbd.h  dg.h  hash.c  hash.h  hwt.c  pack.h  parameters.h  poly.c  toomcook.c
src/kem/smaug_t/KpqClean_ver2_SMAUG-Timer_clean/: api.h  cbd.c  cbd.h  ciphertext.c  ciphertext.h  dg.c  dg.h  hash.c  hash.h  hwt.h  indcpa.c  indcpa.h  io.h  kem.c  kem.h  key.h  pack.c  pack.h  parameters.h  poly.c  poly.h  toomcook.h  verify.c  verify.h
src/sig/: sig.c  sig.h
src/sig/aimer/: CMakeLists.txt  Makefile  cmake_install.cmake  sig_aimer.h  sig_aimer_128f.c  sig_aimer_128s.c  sig_aimer_192f.c  sig_aimer_192s.c  sig_aimer_256f.c  sig_aimer_256s.c
src/sig/aimer/KpqClean_ver2_AIMer128f_avx2/: sign.c
src/sig/aimer/KpqClean_ver2_AIMer128f_clean/: hash.c  test_aimer_hash.c
src/sig/aimer/KpqClean_ver2_AIMer128s_avx2/: hash.h
src/sig/aimer/KpqClean_ver2_AIMer128s_clean/: sign.c
src/sig/aimer/KpqClean_ver2_AIMer192f_clean/: hash.c
src/sig/aimer/KpqClean_ver2_AIMer192s_avx2/: sign.c
src/sig/aimer/KpqClean_ver2_AIMer192s_clean/: sign.c
src/sig/aimer/KpqClean_ver2_AIMer256f_avx2/: sign.c
src/sig/aimer/KpqClean_ver2_AIMer256s_clean/: sign.c
src/sig/haetae/: CMakeLists.txt  Makefile  cmake_install.cmake  sig_haetae.h  sig_haetae_2.c  sig_haetae_3.c  sig_haetae_5.c
src/sig/haetae/KpqClean_ver2_HAETAE2_avx2/: Makefile  api.h  config.h  samplerx4.c  sign.c  sign.h
src/sig/haetae/KpqClean_ver2_HAETAE2_clean/: api.h  fixpoint.c  packing.c  params.h  poly.c  polyfix.c  sampler.c  sign.c  sign.h
src/sig/haetae/KpqClean_ver2_HAETAE3_avx2/: Makefile  api.h  config.h  f1600x4.S  keccakx4_vec.c  keccakx4_vec.h  packing.c  params.h  sign.h  symmetric.h
src/sig/haetae/KpqClean_ver2_HAETAE3_clean/: api.h  fixpoint.c  poly.c  polyfix.c  polyfix.h
src/sig/haetae/KpqClean_ver2_HAETAE5_avx2/: Makefile  api.h  config.h  packing.h  poly.c  polyfix.c  sign.h  symmetric-shake.c
src/sig/haetae/KpqClean_ver2_HAETAE5_clean/: api.h  fixpoint.c  poly.c  polyfix.c  sampler.c
tests/: CMakeLists.txt  kat_sig.c  speed_kem.c
